--- a/style/style.css
+++ b/style/style.css
@@ -4,11 +4,11 @@ body{
 }
 @media(min-width:768px){
 	.firstcontainer{
-	display:flex;
+	#display:flex;
 	}
 }	
 .firstcontainer{
-	display:flex;
+	#display:flex;
 	border:1px black solid;
 	padding:10px;
 }
@@ -18,6 +18,7 @@ h1{
 		color:blue;
 		font-family:Georgia;
 		font-size:200%;
+		text-align:center
 }
 h2{
 		color:white;
@@ -43,21 +44,21 @@ h3{
 }
 
 
-.firstbox{
+#.firstbox{
 	flex:2;
 	order:2;
 	border:1px black solid;
 	padding:10px;
 }
 
-.secondbox{
+#.secondbox{
 	flex:1;
 	order:1;
 	border:1px black solid;
 	padding:10px;
 }
 
-.thirdbox{
+#.thirdbox{
 	flex:3;
 	order:3;
 	border:1px black solid;
